--- a/templates/index.html
+++ b/templates/index.html
@@ -120,14 +120,14 @@
 	</style>
 	
 	<head>
-		<title>Bohmian's Stock News Sentiment Analyzer</title>
+		<title>Analizzatore del Sentimento delle Notizie Azionarie di Bohmian</title>
 	</head>
 	
 	<body style="font-family:arial, sans-serif", style="width: 70%">
 		<center>
-			<h1 style="padding:10px">Bohmian's Stock News Sentiment Analyzer</h1>
+			<h1 style="padding:10px">Analizzatore del Sentimento delle Notizie di Borsa di Bohmian</h1>
 			
-			<h3>Enter a Stock Ticker Symbol to See the Hourly and Daily Sentiment Scores of the Stock</h3>
+			<h3>Inserisci un simbolo di ticker azionario per vedere i punteggi di sentiment orari e giornalieri dell'azione.</h3>
 
 				<form action="sentiment" method="POST" align="center">
 						
@@ -136,14 +136,14 @@
 					<center><input id="submit_button" type="Submit" class="push_button blue"></center>
 					
 				</form>
-			<p>
+			<!--<p>
 				The sentiment is obtained by performing sentimental analysis on recent news headlines using the 
 				<a href="https://www.nltk.org/_modules/nltk/sentiment/vader.html">NLTK Sentiment Vader Python library</a>.<br><br>
 				The recent news headlines are obtained from <a href="https://finviz.com">FinViz website</a>.
 				<br><br>
 				<i>Disclaimer: This page is not meant to represent any form of financial advice. 
 				Any investments you make will carry risk so remember to do your due diligence and research before doing so.</i>
-			</p>
+			</p>-->
 		</center>
 	</body>
 </html>
